2012-01-31 Julien Nicoulaud <julien.nicoulaud@gmail.com>

	* build-492-1 :
	New upstream release.
	Remove /etc/default/sickbeard.
	Remove no more needed Cheetah patch.

2012-01-29 Julien Nicoulaud <julien.nicoulaud@gmail.com>

	* build-491-1 :
	Import package based on sickbeard-git.
	Add changelog.
	Document /etc/conf.d/sickbeard.
	Add /etc/default/sickbeard that contains defaults for /etc/conf.d/sickbeard.
	Sources go to /usr/lib/sickbeard.
	Runtime resources go to /var/lib/sickbeard.
	Logs go to /var/log/sickbeard.
	Configuration files go to /etc/sickbeard.
	Copyright resources go to /usr/share/licenses/sickbeard.
	Documentation resources go to /usr/share/doc/sickbeard.
	Make daemon directly use /usr/bin/sickbeard.
	Add optdepends on sabnzbd and python-notify.
	Add conflicts on sickbeard-git.