@@ -13,8 +13,8 @@ post_install() {
   fi
 
   # Create or repair Sick-Beard owned directories.
-  mkdir -p                     /etc/sickbeard /var/lib/sickbeard /var/log/sickbeard
-  chown -R sickbeard:sickbeard /etc/sickbeard /var/lib/sickbeard /var/log/sickbeard
+  mkdir -p                     /etc/sickbeard /var/lib/sickbeard /var/log/sickbeard /var/run/sickbeard
+  chown -R sickbeard:sickbeard /etc/sickbeard /var/lib/sickbeard /var/log/sickbeard /var/run/sickbeard
 }
 
 post_upgrade() {
