@@ -1,3 +1,10 @@
+2012-02-02 Julien Nicoulaud <julien.nicoulaud@gmail.com>
+
+	* build-492-2 :
+	Be more verbose when building the package.
+	Use kill+daemon pid file to stop the daemon.
+	Wait for the daemon to be stopped (fixes rc.d restart sickbeard).
+
 2012-01-31 Julien Nicoulaud <julien.nicoulaud@gmail.com>
 
 	* build-492-1 :
